# libkcddb

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  EnabledFeatures.txt  KF5CddbConfig.cmake.in  LibkcddbConfig.cmake.in  Mainpage.dox  Makefile.am  Messages.sh  TODO  asynccddblookup.cpp  asynccddblookup.h  asynccddbplookup.cpp  asynccddbplookup.h  asyncclient.cpp  asyncclient.h  asynchttplookup.cpp  asynchttplookup.h  asynchttpsubmit.cpp  asynchttpsubmit.h  asynclookup.cpp  asynclookup.h  asyncsmtpsubmit.cpp  asyncsmtpsubmit.h  cache.cpp  cache.h  categories.cpp  categories.h  cddb.cpp  cddb.h  cddblookup.cpp  cddblookup.h  cddbplookup.cpp  cddbplookup.h  cdinfo.cpp  cdinfo.h  cdinfodialog.cpp  cdinfodialog.h  cdinfodialog.ui  (+51 more)
cmake/: FindMusicBrainz4.cmake  FindMusicBrainz5.cmake
kcmcddb/: CMakeLists.txt  Makefile.am  Messages.sh  cddb.desktop  cddbconfigwidget.cpp  cddbconfigwidget.h  cddbconfigwidget.ui  cddbconfigwidgetbase.ui  kcm_cddb.json  kcmcddb-emailsettings.upd  kcmcddb.cpp  kcmcddb.h  kcmcddb.moc  kcmcddbi18n.h  kcmcddbmoduledata.cpp  kcmcddbmoduledata.h  libkcddb.desktop
kcmcddb/doc/: CMakeLists.txt  index.docbook
libkcddb/: .directory  CMakeLists.txt  KCddb6Config.cmake.in  KF5CddbConfig.cmake.in  asynccddbplookup.cpp  asynccddbplookup.h  asynchttplookup.cpp  asynchttplookup.h  asynchttpsubmit.cpp  asynchttpsubmit.h  asyncsmtpsubmit.cpp  asyncsmtpsubmit.h  cache.cpp  cache.h  categories.cpp  categories.h  cddb.cpp  cddb.h  cddbplookup.cpp  cddbplookup.h  cdinfo.cpp  cdinfo.h  cdinfodialog.cpp  cdinfodialog.h  cdinfodialog.ui  cdinfoencodingwidget.cpp  cdinfoencodingwidget.h  cdinfoencodingwidget.ui  client.cpp  client.h  compatheader.h.in  config.cpp  configbase.kcfgc  genres.cpp  genres.h  httplookup.cpp  httplookup.h  httpsubmit.cpp  httpsubmit.h  kcddb.cpp  (+24 more)
libkcddb/musicbrainz/: asyncmusicbrainzlookup.cpp  asyncmusicbrainzlookup.h  musicbrainzlookup.cpp  musicbrainzlookup.h
musicbrainz/: CMakeLists.txt  Makefile.am  asyncmusicbrainzlookup.cpp  asyncmusicbrainzlookup.h  musicbrainzlookup.cpp  musicbrainzlookup.h  sha1.c
po/ar/: kcmcddb.po  libkcddb.po
po/ast/: kcmcddb.po
po/be/: kcmcddb.po  libkcddb.po
po/bg/: kcmcddb.po  libkcddb.po
po/br/: kcmcddb.po  libkcddb.po
po/bs/: kcmcddb.po  libkcddb.po
po/ca/: kcmcddb.po  libkcddb.po
po/ca@valencia/: kcmcddb.po  libkcddb.po
po/cs/: kcmcddb.po  libkcddb.po
po/cy/: kcmcddb.po  libkcddb.po
po/da/: kcmcddb.po  libkcddb.po
po/de/: kcmcddb.po  libkcddb.po
po/el/: kcmcddb.po  libkcddb.po
po/en_GB/: kcmcddb.po  libkcddb.po
po/eo/: kcmcddb.po  libkcddb.po
po/es/: kcmcddb.po  libkcddb.po
po/et/: kcmcddb.po  libkcddb.po
po/eu/: kcmcddb.po  libkcddb.po
po/fa/: kcmcddb.po  libkcddb.po
po/fi/: kcmcddb.po  libkcddb.po
po/fr/: kcmcddb.po  libkcddb.po
po/ga/: kcmcddb.po  libkcddb.po
po/gl/: kcmcddb.po  libkcddb.po
po/he/: kcmcddb.po  libkcddb.po
po/hi/: kcmcddb.po  libkcddb.po
po/hne/: kcmcddb.po  libkcddb.po
po/hr/: kcmcddb.po  libkcddb.po
po/hu/: kcmcddb.po  libkcddb.po
po/ia/: kcmcddb.po  libkcddb.po
po/is/: kcmcddb.po  libkcddb.po
po/it/: kcmcddb.po  libkcddb.po
po/ja/: kcmcddb.po  libkcddb.po
po/ka/: kcmcddb.po  libkcddb.po
po/kk/: kcmcddb.po  libkcddb.po
po/km/: kcmcddb.po  libkcddb.po
po/ko/: kcmcddb.po  libkcddb.po
po/lt/: kcmcddb.po  libkcddb.po
po/lv/: kcmcddb.po  libkcddb.po
po/mk/: kcmcddb.po  libkcddb.po
po/mr/: kcmcddb.po  libkcddb.po
po/ms/: kcmcddb.po  libkcddb.po
po/nb/: kcmcddb.po  libkcddb.po
po/nds/: kcmcddb.po  libkcddb.po
po/ne/: kcmcddb.po  libkcddb.po
po/nl/: kcmcddb.po  libkcddb.po
po/nn/: kcmcddb.po  libkcddb.po
po/oc/: kcmcddb.po  libkcddb.po
po/pa/: kcmcddb.po  libkcddb.po
po/pl/: kcmcddb.po  libkcddb.po
po/pt/: kcmcddb.po  libkcddb.po
po/pt_BR/: kcmcddb.po  libkcddb.po
po/ro/: kcmcddb.po  libkcddb.po
po/ru/: kcmcddb.po  libkcddb.po
po/se/: kcmcddb.po  libkcddb.po
po/sk/: kcmcddb.po  libkcddb.po
po/sl/: kcmcddb.po  libkcddb.po
po/sq/: kcmcddb.po  libkcddb.po
po/sr/: kcmcddb.po  libkcddb.po
po/sr@ijekavian/: kcmcddb.po  libkcddb.po
po/sr@ijekavianlatin/: kcmcddb.po  libkcddb.po
po/sr@latin/: kcmcddb.po  libkcddb.po
po/sv/: kcmcddb.po  libkcddb.po
po/ta/: kcmcddb.po  (+1 more)
test/: CMakeLists.txt  Makefile.am  asynccddblookuptest.cpp  asynccddblookuptest.h  asynchttplookuptest.cpp  asynchttplookuptest.h  asynchttpsubmittest.cpp  asynchttpsubmittest.h  asyncmusicbrainztest.cpp  asyncmusicbrainztest.h  asyncsmtpsubmittest.cpp  asyncsmtpsubmittest.h  cachetest.cpp  cachetest.h  cdinfotest.cpp  cdinfotest.h  musicbrainztest-fulldate.cpp  musicbrainztest-fulldate.h  musicbrainztest-severaldiscs.cpp  musicbrainztest-severaldiscs.h  musicbrainztest.cpp  musicbrainztest.h  sitestest.cpp  synccddblookuptest.cpp  synccddblookuptest.h  synchttplookuptest.cpp  synchttplookuptest.h  synchttpsubmittest.cpp  syncsmtpsubmittest.cpp  utf8asyncsubmittest.cpp  utf8asyncsubmittest.h  utf8submittest.cpp  utf8syncsubmittest.cpp  utf8test.cpp  utf8test.h
test/lookup/: Makefile.am
test/lookup/async/: Makefile.am
test/lookup/async/cddb/: test.cpp  test.h
test/lookup/async/http/: Makefile.am  test.cpp  test.h
test/lookup/sync/: Makefile.am
test/lookup/sync/cddb/: Makefile.am  test.cpp
test/lookup/sync/http/: test.cpp
test/submit/: Makefile  Makefile.am
test/submit/async/: Makefile
test/submit/sync/cddb/: Makefile.am  test.cpp
tests/: CMakeLists.txt  asynccddblookuptest.cpp  asynccddblookuptest.h  asynchttplookuptest.cpp  asynchttplookuptest.h  asynchttpsubmittest.cpp  asynchttpsubmittest.h  asyncmusicbrainztest.cpp  asyncmusicbrainztest.h  asyncsmtpsubmittest.cpp  asyncsmtpsubmittest.h  cachetest.cpp  cachetest.h  cdinfotest.cpp  cdinfotest.h  musicbrainztest-fulldate.cpp  musicbrainztest-fulldate.h  musicbrainztest-severaldiscs.cpp  musicbrainztest-severaldiscs.h  musicbrainztest.cpp  musicbrainztest.h  sitestest.cpp  synccddblookuptest.cpp  synccddblookuptest.h  synchttplookuptest.cpp  synchttplookuptest.h  synchttpsubmittest.cpp  syncsmtpsubmittest.cpp  utf8test.cpp  utf8test.h
(+31 files in other folders)
